--- a/index.html
+++ b/index.html
@@ -1,36 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <title>Panda E-commarce practice</title>
     <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
+    <!-- custiom css -->
+    <link rel="stylesheet" href="style.css">
 
-    <!-- Optional JavaScript; choose one of the two! -->
+
+</head>
+
+<body>
+    <!-- Navbar Start -->
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #FF136F">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="images/logo.png" alt="" width="159" height="30" class="d-inline-block align-text-top">
+
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item me-5">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item me-5 ">
+                        <a class="nav-link active" href="#">Products</a>
+                    </li>
+                    <li class="nav-item me-5">
+                        <a class="nav-link active" href="#">About</a>
+                    </li>
+                    <li class="nav-item me-5">
+                        <a class="nav-link active" href="#">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- Navbar End  -->
+
+
+
+    <!-- slider -->
+
+    <div class="container my-5 " style="background-color: #FEEAE9; border-radius: 15px; ;">
+
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="row d-flex align-items-center">
+                        <div class="col-12 col-md-7 p-5 ">
+                            <h1 class="">Mega Tv 4A Pro 32</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nobis suscipit quaerat,
+                                doloremque debitis veritatis quae tenetur odio vero dolore!</p>
+                            <h1 style="color: #FF136F;">$1200</h1>
+                            <button class="btn" style="background-color: #FF136F ; color: white;">Buy Now</button>
+                        </div>
+                        <div class="col-12 col-md-5">
+                            <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="carousel-item">
+
+                    <div class="row d-flex align-items-center">
+                        <div class="col-12 col-md-7 p-5 ">
+                            <h1 class="">Cool Dude Headphone</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nobis suscipit quaerat,
+                                doloremque debitis veritatis quae tenetur odio vero dolore!</p>
+                            <h1 style="color: #FF136F;">$450</h1>
+                            <button class="btn" style="background-color: #FF136F ; color: white;">Buy Now</button>
+                        </div>
+                        <div class="col-12 col-md-5">
+                            <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+
+                </div>
+                <div class="carousel-item">
+
+                    <div class="row d-flex align-items-center">
+                        <div class="col-12 col-md-7 p-5 ">
+                            <h1 class="">X-BOX for your living room </h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nobis suscipit quaerat,
+                                doloremque debitis veritatis quae tenetur odio vero dolore!</p>
+                            <h1 style="color: #FF136F;">$600</h1>
+                            <button class="btn" style="background-color: #FF136F ; color: white;">Buy Now</button>
+                        </div>
+                        <div class="col-12 col-md-5">
+                            <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+
+                </div>
+
+
+
+
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+
+    </div>
+
+    <!-- slider end -->
+
+
+
+    <!-- product menu -->
+    <div class="container  my-5">
+        <div class="row g-5">
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class=" border bg-light d-flex align-items-center justify-content-between px-5 py-3  rounded-3"
+                    style="background:linear-gradient(#FF9C35,#FFD019)">
+                    <h1>Bag</h1>
+                    <img src="images/categories/bag.png" class="w-25" alt="">
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class=" border bg-light d-flex align-items-center justify-content-between px-5 py-3  rounded-3"
+                    style="background:linear-gradient(#FF589B,#FF136F)">
+                    <h1>Watch</h1>
+                    <img src="images/categories/watch.png" class="w-25" alt="">
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="border border bg-light d-flex align-items-center justify-content-between px-5 py-3  rounded-3"
+                    style="background:linear-gradient(#4289FF,#3F07F8)">
+                    <h1>Shoes</h1>
+                    <img src="images/categories/shoes.png" class="w-25" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- product menu end  -->
+
+
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
-  </body>
+</body>
+
 </html>
