--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item me-5">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item me-5 ">
-                        <a class="nav-link active" href="#">Products</a>
+                        <a class="nav-link active" href="#product">Products</a>
                     </li>
                     <li class="nav-item me-5">
                         <a class="nav-link active" href="#">About</a>
                     </li>
                     <li class="nav-item me-5">
-                        <a class="nav-link active" href="#">Contact Us</a>
+                        <a class="nav-link active" href="#contact">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -132,17 +132,17 @@
 
 
     <!-- product menu -->
-    <div class="container  my-5">
+    <div class="container  my-5" id="product">
         <div class="row g-5">
             <div class="col-12 col-md-6 col-lg-4">
-                <div class=" border bg-light d-flex align-items-center justify-content-between px-5 py-3  rounded-3"
+                <div class=" border bg-light d-flex align-items-center justify-content-between px-5 py-4  rounded-3"
                     style="background:linear-gradient(#FF9C35,#FFD019)">
                     <h1>Bag</h1>
                     <img src="images/categories/bag.png" class="w-25" alt="">
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
-                <div class=" border bg-light d-flex align-items-center justify-content-between px-5 py-3  rounded-3"
+                <div class=" border bg-light d-flex align-items-center justify-content-between px-5 py-4  rounded-3"
                     style="background:linear-gradient(#FF589B,#FF136F)">
                     <h1>Watch</h1>
                     <img src="images/categories/watch.png" class="w-25" alt="">
@@ -150,7 +150,7 @@
             </div>
 
             <div class="col-12 col-md-6 col-lg-4">
-                <div class="border border bg-light d-flex align-items-center justify-content-between px-5 py-3  rounded-3"
+                <div class="border border bg-light d-flex align-items-center justify-content-between px-5 py-4  rounded-3"
                     style="background:linear-gradient(#4289FF,#3F07F8)">
                     <h1>Shoes</h1>
                     <img src="images/categories/shoes.png" class="w-25" alt="">
@@ -162,7 +162,200 @@
     <!-- product menu end  -->
 
 
+    <!-- shoes section  -->
 
+    <div class="container my-5">
+        <h2>Shoes</h2>
+        <div class="row g-4">
+            <div class="col-12 col-md-6 col-lg-4 ">
+
+                <div class="card p-4 shadow">
+                    <div class="card-img">
+                        <img src="images/shoes/shoe-1.png" class="w-100" alt="">
+                    </div>
+                    <div class="card-title">
+                        <h2>Supply 350</h2>
+                    </div>
+                    <div class="card-text text-j">
+                        <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                            Pariatur velit nostrum rerum saepe
+                            est aspernatur iste similique iure voluptatem id? Recusandae eaque fugiat corrupti aliquam?
+                        </p>
+                        <h2>$300</h2>
+                        <button class="btn " style="background-color:#FF136F ; color: white;">Buy Now >></button>
+                    </div>
+
+                </div>
+
+
+            </div>
+
+
+
+
+            <div class="col-12 col-md-6 col-lg-4 ">
+
+                <div class="card p-4 shadow">
+                    <div class="card-img">
+                        <img src="images/shoes/shoe-2.png" class="w-100" alt="">
+                    </div>
+                    <div class="card-title">
+                        <h2>Nike 360</h2>
+                    </div>
+                    <div class="card-text">
+                        <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                            Pariatur velit nostrum rerum saepe
+                            est aspernatur iste similique iure voluptatem id? Recusandae eaque fugiat corrupti aliquam?
+                        </p>
+                        <h2>$320</h2>
+                        <button class="btn btn-warning" style="background-color:#FF136F ; color: white;">Buy Now
+                            >></button>
+                    </div>
+
+                </div>
+
+
+            </div>
+
+
+
+            <div class="col-12 col-md-6 col-lg-4 ">
+
+                <div class="card p-4 shadow">
+                    <div class="card-img">
+                        <img src="images/shoes/shoe-3.png" class="w-100" alt="">
+                    </div>
+                    <div class="card-title">
+                        <h3>Red Airmark</h3>
+                    </div>
+                    <div class="card-text">
+                        <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                            Pariatur velit nostrum rerum saepe
+                            est aspernatur iste similique iure voluptatem id? Recusandae eaque fugiat corrupti aliquam?
+                        </p>
+                        <h2>$360</h2>
+                        <button class="btn btn-warning" style="background-color:#FF136F ; color: white;">Buy Now
+                            >></button>
+                    </div>
+
+                </div>
+
+
+            </div>
+        </div>
+
+    </div>
+    <!-- shoes section end -->
+
+
+
+
+
+    <!-- beg section -->
+    <div class="container my-5">
+        <h2>Begs</h2>
+        <div class="row g-4">
+            <div class="col-12 col-md-6 col-lg-4 ">
+
+                <div class="card p-4 shadow">
+                    <div class="card-img">
+                        <img src="images/bags/bag-1.png" class="w-100" alt="">
+                    </div>
+                    <div class="card-title">
+                        <h2>Bag-1</h2>
+                    </div>
+                    <div class="card-text text-j">
+                        <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                            Pariatur velit nostrum rerum saepe
+                            est aspernatur iste similique iure voluptatem id? Recusandae eaque fugiat corrupti aliquam?
+                        </p>
+                        <h2>$300</h2>
+                        <button class="btn " style="background-color:#FF136F ; color: white;">Buy Now >></button>
+                    </div>
+
+                </div>
+
+
+            </div>
+
+
+
+
+            <div class="col-12 col-md-6 col-lg-4 ">
+
+                <div class="card p-4 shadow">
+                    <div class="card-img">
+                        <img src="images/bags/bag-3.png" class="w-100" alt="">
+                    </div>
+                    <div class="card-title">
+                        <h2>Bag-2</h2>
+                    </div>
+                    <div class="card-text">
+                        <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                            Pariatur velit nostrum rerum saepe
+                            est aspernatur iste similique iure voluptatem id? Recusandae eaque fugiat corrupti aliquam?
+                        </p>
+                        <h2>$320</h2>
+                        <button class="btn btn-warning" style="background-color:#FF136F ; color: white;">Buy Now
+                            >></button>
+                    </div>
+
+                </div>
+
+
+            </div>
+
+
+
+            <div class="col-12 col-md-6 col-lg-4 ">
+
+                <div class="card p-4 shadow">
+                    <div class="card-img">
+                        <img src="images/bags/bag-2.png" class="w-100" alt="">
+                    </div>
+                    <div class="card-title">
+                        <h3>Bag-3</h3>
+                    </div>
+                    <div class="card-text">
+                        <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                            Pariatur velit nostrum rerum saepe
+                            est aspernatur iste similique iure voluptatem id? Recusandae eaque fugiat corrupti aliquam?
+                        </p>
+                        <h2>$360</h2>
+                        <button class="btn btn-warning" style="background-color:#FF136F ; color: white;">Buy Now
+                            >></button>
+                    </div>
+
+                </div>
+
+
+            </div>
+        </div>
+
+    </div>
+
+
+
+
+
+    <section id="contact" class="container my-5 d-flex justify-content-center" style="background-color: #FEEAE9;">
+
+        <div class="contact my-5" style="width: 310px;">
+            <h2>Let's Stay in touch</h2>
+            <p>Get updates oon salesm specials and more</p>
+            <form action="">
+                <input type="text" class="form-control my-2">
+                <button class="btn btn-primary"> Submit</button>
+            </form>
+        </div>
+
+
+    </section>
+
+
+    <footer class="text-center">
+        <p>All copyright &copy; Reserved to Panda E-commarce</p>
+    </footer>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
